# GatePoint

./: LICENSE.txt  README.rst  example.py  pyproject.toml  setup.py
api_gateway/: __init__.py  __main__.py  gateway.py  object_types.py
gatepoint/: __init__.py  __main__.py  errors.py  gateway.py  interaction.py  object_types.py  objects.py  option.py
gatepoint/chunks/: chunk.py
gatepoint/components/: __init__.py  button.py  component.py  menu.py
src/: discord.py
src/api_gateway/: __init__.py  __main__.py  gateway.py  interaction.py
src/discord/: gateway.py  interaction.py
